--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "serve": "NODE_OPTIONS=--openssl-legacy-provider vue-cli-service serve",
+    "build": "NODE_OPTIONS=--openssl-legacy-provider vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
@@ -20,6 +20,7 @@
     "eslint-plugin-vue": "^5.0.0-0",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
+    "regenerator-runtime": "^0.14.1",
     "vue-template-compiler": "^2.5.17"
   },
   "eslintConfig": {
